fix: add horizontal scroll for responsiveness

--- a/kick-stats-board/src/components/common/Table.css
+++ b/kick-stats-board/src/components/common/Table.css
@@ -1,3 +1,8 @@
+.table-container {
+  width: 100%;
+  overflow-x: scroll;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
